force-app/main/default/objects/Application_Logging_Config__mdt/Application_Logging_Config__mdt.object-meta.xml
<CustomObject>
    <label>Application Logging Config</label>
    <pluralLabel>Application Logging Config</pluralLabel>
</CustomObject>