force-app/main/default/objects/Application_Logging_Config__mdt/fields/All_Logs_Purge_Days__c.field-meta.xml
<CustomField>
    <fullName>All_Logs_Purge_Days__c</fullName>
    <description>Purge days for all types of logs</description>
    <label>All Logs Purge Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>