force-app/main/default/objects/Application_Logging_Config__mdt/fields/Exception_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Exception_Logging_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exception Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>