force-app/main/default/objects/Application_Logging_Config__mdt/fields/Exception_Logs_Purge_Days__c.field-meta.xml
<CustomField>
    <fullName>Exception_Logs_Purge_Days__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Exception Logs Purge Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>