force-app/main/default/objects/Application_Logging_Config__mdt/fields/Integration_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Integration_Logging_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Integration Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>