force-app/main/default/objects/Application_Logging_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Exception_Logging_Enabled__c</columns>
    <columns>Exception_Logs_Purge_Days__c</columns>
    <columns>Integration_Logging_Enabled__c</columns>
    <columns>Integration_Logs_Purge_Days__c</columns>
    <columns>All_Logs_Purge_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>